Bug 76030 - Writer tables: default border no longer visible
Summary: Writer tables: default border no longer visible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-11 13:12 UTC by Miklos Vajna
Modified: 2014-04-20 19:08 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Reproducer document (8.92 KB, application/vnd.oasis.opendocument.text)
2014-03-11 13:12 UTC, Miklos Vajna
Details
How it looks like on master (bad) (55.38 KB, image/png)
2014-03-11 13:14 UTC, Miklos Vajna
Details
How it looked like on libreoffice-4-1 (good) (35.39 KB, image/png)
2014-03-11 13:15 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2014-03-11 13:12:54 UTC
Created attachment 95597 [details]
Reproducer document

See the reproducer document, it's what you get once you create a new Writer document and insert a default 2x2 table.
Comment 1 Miklos Vajna 2014-03-11 13:14:10 UTC
Created attachment 95598 [details]
How it looks like on master (bad)
 1b8d1001c4a92c8788266215fdd14e301b0a0d04 to be exact.
Comment 2 Miklos Vajna 2014-03-11 13:15:59 UTC
Created attachment 95599 [details]
How it looked like on libreoffice-4-1 (good)
 15a7061ee48cdbeb0d366eab7788cf4cfd68e5c2 to be exact.
Comment 3 Kohei Yoshida 2014-03-11 14:36:00 UTC
I'll take it.
Comment 4 Commit Notification 2014-03-11 14:44:55 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2b9e7a0cb2492f19745f61a4829ff3802b25291f

fdo#76030: Use the table boundaries view option to toggle border drawing.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Kohei Yoshida 2014-03-11 14:45:40 UTC
This was introduced as a side effect of the fix for Bug 75118.

Anyway, I hopefully fixed it the right way.  Here is for 4.2 backport:

https://gerrit.libreoffice.org/8533
Comment 6 Commit Notification 2014-03-12 10:48:21 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=95a6f31773e0ae03630ac301d0415361496243a4&h=libreoffice-4-2

fdo#76030: Use the table boundaries view option to toggle border drawing.


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2014-03-12 13:07:08 UTC
Fixed.
Comment 8 mhonline 2014-04-20 19:08:52 UTC
may be, but in 4.2.3 it is not fixed
pls reopen

martin