fdo#76030: Use the table boundaries view option to toggle border drawing.

Unless I'm missing something, fixing the problem reported in fdo#75118 this
way is more reliable, and certainly avoids the problem reported in fdo#76030.

Change-Id: Ife524d9db12e9fa4528c2232e619bfacde367659
(cherry picked from commit 2b9e7a0cb2492f19745f61a4829ff3802b25291f)